--- a/awardsapp/templates/navbar.html
+++ b/awardsapp/templates/navbar.html
@@ -46,6 +46,7 @@ text-decoration: none;
 }
 
 </style>
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
 <link href="https://fonts.googleapis.com/css?family=Archivo+Narrow|Charmonman|Kodchasan|Dancing+Script|Spirax" rel="stylesheet">
 
@@ -96,7 +97,7 @@ text-decoration: none;
   <div class="input-group">
     <input type="text" style="font-family: 'Dosis', sans-serif;" class="form-control mr-sm-4" placeholder="Search Project" name="project">
     <div class="input-group-btn">
-      <button class="btn btn-outline-primary my-2 my-sm-0" style="font-family: 'Dosis', sans-serif;" type="submit">Find</button>
+      <i class="fas fa-search" style="font-size: 20px; padding-top: 8px;"></i>
     </div>
   </div>
 
