--- a/awardsapp/templates/registration/new_project.html
+++ b/awardsapp/templates/registration/new_project.html
@@ -3,31 +3,17 @@
 {%load static%}
 {% block content %}
 
-
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <title>New Project</title>
-  {{form.media}}
-
-{% block styles %}
-    {% bootstrap_css %}
-  <link rel="stylesheet" href="{% static 'css/styles.css' %}"> {% endblock %}
-
-</head>
-
-<body>
+  <div style="background-image: url('{% static 'photos/background-2.jpeg' %}'); height: 400px; margin-bottom: 4%;"></div>
 <div class="container" style="background-color:#fff;">
 
      <div class="row">
 
 
-  <form  action="{%url 'new_project'%}" method="post" style="font-family: 'Dosis', sans-serif;" enctype="multipart/form-data">
+  <form  action="{%url 'new_project'%}" method="post" style="font-family: 'Dancing Script', cursive;" enctype="multipart/form-data">
     {%csrf_token%}
 
     {% bootstrap_form form%}
-    <input id="id_myfield" type="submit" class="btn btn-success btn-lg" value="Post">
+    <input id="id_myfield" type="submit" class="btn btn-success btn-sm" value="Post">
   </form>
 
    {% block scripts %}
@@ -38,5 +24,4 @@
 
      </div>
 </div>
-</body>
 {% endblock %}
