--- a/awardsapp/templates/registration/user_image_list.html
+++ b/awardsapp/templates/registration/user_image_list.html
@@ -4,14 +4,14 @@
 {% block content %}
 
 <div class="jumbotron text-center" style="background-color:white;">
-    <h1 style="font-family: 'Dosis', sans-serif;"> Your Profile Page </h1>
+    <h1 style="font-family: 'Dancing Script', cursive;"> Your Profile Page </h1>
 
     {% if profile.profile_pic %}
      <img src="{{user.profile.profile_pic.url | default_if_none:'#'}}" class="img-thumbnail" id="eachimage1" style="height:200px;width:150px;"></a>
    {% endif %}
-    <p style="font-family: 'Dosis', sans-serif;">{{user.profile.bio}}</p>
-    <p style="font-family: 'Dosis', sans-serif;">{{user.profile.contact}}</p>
-    <button class="btn btn-lg btn-success" style="font-family: 'Dosis', sans-serif;"><a href=" {%url 'edit_profile'%}">Edit Profile</a></button>
+    <p style="font-family: 'Dancing Script', cursive;">{{user.profile.bio}}</p>
+    <p style="font-family: 'Dancing Script', cursive;">{{user.profile.contact}}</p>
+    <button class="btn btn-success btn-sm"><a href=" {%url 'edit_profile'%}" style="color: #ca9e30; text-decoration: none;">Edit Profile</a></button>
     </div>
 
 <div class="container">
@@ -21,8 +21,8 @@
     <div class="card border-secondary"><a href="{% url 'image' image.id %}">
         <img src="{{project.project_image.url }}" class="img-fluid" id="eachimage"
           size="100px200"></a>
- <p style="font-family: 'Dosis', sans-serif;"> Caption : {{ project.description}}</p>
-      <p style="font-family: 'Dosis', sans-serif;">Posted by : {{ project.user}}</p>
+ <p style="font-family: 'Dancing Script', cursive;"> Caption : {{ project.description}}</p>
+      <p style="font-family: 'Dancing Script', cursive;">Posted by : {{ project.user}}</p>
     </div>
     {% endfor %}
   </div>
