--- a/awardsapp/templates/index.html
+++ b/awardsapp/templates/index.html
@@ -4,7 +4,7 @@
 {% block content %}
 <link href="https://fonts.googleapis.com/css?family=Charmonman|Dancing+Script|Kodchasan|Spirax|Abril+Fatface" rel="stylesheet">
 
-<div style="background-image: url('{% static 'photos/background-1.jpg' %}'); height: 300px;">
+<div style="background-image: url('{% static 'photos/background-2.jpeg' %}'); height: 400px;">
 
 
 
@@ -20,12 +20,12 @@
 
         <img src="{{project.project_image.url}}" data-target="#imageModal{{project.id}}" data-toggle="modal" alt="" class="img-fluid"
           id="eachimage1" size="100px200"></a>
-      <p style="font-family: 'Dosis', sans-serif; text-align:center;"> {{ project.description}}</p>
-     <p style="font-family: 'Dosis', sans-serif; text-align:center;"> {{ project.user.username}}</p>
+      <p style="font-family: 'Dancing Script', cursive; text-align:center;"> {{ project.description}}</p>
+     <p style="font-family: 'Dancing Script', cursive; text-align:center;"> {{ project.user.username}}</p>
      <div style="display: inline; text-align: center; padding-bottom: 3%;">
 
-       <button type="button" class="btn btn-success btn-sm"><a href="{{ project.project_url}}" style="color: #ffffff; text-decoration: none;">&nbsp;&nbsp;Visit Site&nbsp;&nbsp;</a></button>
-       <button type="button" class="btn btn-success btn-sm"><a href="{% url 'project' project.id %}" style="color: #ffffff; text-decoration: none;">View Project</a></button>
+       <button type="button" class="btn btn-success btn-sm"><a href="{{ project.project_url}}" style="color: #ca9e30; text-decoration: none;">&nbsp;&nbsp;Visit Site&nbsp;&nbsp;</a></button>
+       <button type="button" class="btn btn-success btn-sm"><a href="{% url 'project' project.id %}" style="color: #ca9e30; text-decoration: none;">View Project</a></button>
 
      </div>
 
@@ -35,8 +35,8 @@
 
   <div class="container" style="margin-top: 4%;">
     <div class="row">
-      <div class="col-md-4"></div>
-      <div class="col-md-4" style="border: 2px solid #ca9e30;">
+      <div class="col-md-3"></div>
+      <div class="col-md-6" style="border: 1px solid #ca9e30;">
 
         <div style="padding: 8%;">
 
@@ -49,7 +49,7 @@
 
       </div>
 
-      <div class="col-md-4"></div>
+      <div class="col-md-3"></div>
 
     </div>
 
