--- a/awardsapp/templates/navbar.html
+++ b/awardsapp/templates/navbar.html
@@ -5,10 +5,12 @@
     margin: 0;
     padding: 0;
     overflow: hidden;
+
   }
 
   li {
     float: right;
+
   }
 
   li a {
@@ -17,6 +19,7 @@
     text-align: center;
     padding: 10px 10px;
     text-decoration: none;
+
   }
 
   /* Change the link color to #111 (black) on hover */
@@ -26,26 +29,40 @@
   }
 
 .btn-success {
-      background: #ca9e30;
-      color: #ffffff;
-      padding: 14px 24px;
-      border: 0 none;
-      font-weight: 700;
+      background-color:transparent;
+      color: #ca9e30;
+      border-color: #ca9e30;
+      padding: 10px 14px;
+      font-weight: 500;
       letter-spacing: 1px;
       text-decoration: none;
   }
 
 .btn-success:hover{
-background: #ca9e33;
-color: #ffffff;
-padding: 14px 24px;
-border: 0 none;
-font-weight: 700;
-letter-spacing: 1px;
-text-decoration: none;
+  background-color:transparent;
+  color: #ca9e30;
+  border-color: #ca9e30;
+  padding: 10px 14px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  text-decoration: none;
+}
+.btn-success:focus{
+  background-color:transparent;
+  color: #ca9e30;
+  border-color: #ca9e30;
+  padding: 10px 14px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  text-decoration: none;
+}
+
+h3 {
+  font-size: 20px;
 }
 
 </style>
+<link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
 <link href="https://fonts.googleapis.com/css?family=Archivo+Narrow|Charmonman|Kodchasan|Dancing+Script|Spirax" rel="stylesheet">
@@ -61,33 +78,33 @@ text-decoration: none;
     <div class="col-sm-6 col-md-6">
       {% if user.is_authenticated %}
       <ul>
-      <li style="font-family: 'Dosis', sans-serif;">
-        <a href="{%url 'edit_profile'%}">Edit Profile</a>
+      <li style="font-family: 'Dancing Script', cursive;">
+        <a style="font-size: 16px;" href="{%url 'edit_profile'%}">Edit Profile</a>
       </li>
 
-      <li style="font-family: 'Dosis', sans-serif;">
-        <a href="{% url 'individual_profile_page' user.id %}">My Profile &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|</a>
+      <li style="font-family: 'Dancing Script', cursive;">
+        <a style="font-size: 16px;" href="{% url 'individual_profile_page' user.id %}">My Profile &nbsp;&nbsp;&nbsp;&nbsp;|</a>
       </li>
-                   <li style="font-family: 'Dosis', sans-serif;">
-                    <a href="{%url 'new_project'%}"> Submit Your Project &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|</a>
+                   <li style="font-family: 'Dancing Script', cursive;">
+                    <a style="font-size: 16px;" href="{%url 'new_project'%}"> Submit Your Project &nbsp;&nbsp;&nbsp;&nbsp;|</a>
                   </li>
-      <li style="font-family: 'Dosis', sans-serif;">
-        <a href="/accounts/password/change">Change Password &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|</a>
+      <li style="font-family: 'Dancing Script', cursive;">
+        <a style="font-size: 16px;" href="/accounts/password/change">Change Password &nbsp;&nbsp;&nbsp;&nbsp;|</a>
       </li>
 
-      <li style="font-family: 'Dosis', sans-serif;">
-        <a href="/logout">Logout &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|</a>
+      <li style="font-family: 'Dancing Script', cursive;">
+        <a style="font-size: 16px;" href="/logout">Logout &nbsp;&nbsp;&nbsp;&nbsp;|</a>
       </li>
       </ul>
 
       {% else %}
       <ul>
-      <li style="font-family: 'Dosis', sans-serif;">
-        <a class='btn btn-default' href="/accounts/login">Login &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|</a>
+      <li style="font-family: 'Dancing Script', cursive;">
+        <a style="font-size: 16px;" class='btn btn-default' href="/accounts/login">Login &nbsp;&nbsp;&nbsp;&nbsp;|</a>
       </li>
 
-      <li style="font-family: 'Dosis', sans-serif;">
-        <a class='btn btn-default' href="/accounts/register">Register &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|</a>
+      <li style="font-family: 'Dancing Script', cursive;">
+        <a style="font-size: 16px;" class='btn btn-default' href="/accounts/register">Register &nbsp;&nbsp;&nbsp;&nbsp;|</a>
       </li>
       </ul>
 
@@ -95,9 +112,9 @@ text-decoration: none;
 <form class="navbar-form" role="search" action="{% url 'search_projects' %}">
 
   <div class="input-group">
-    <input type="text" style="font-family: 'Dosis', sans-serif;" class="form-control mr-sm-4" placeholder="Search Project" name="project">
+    <input type="text" style="font-family: 'Dancing Script', cursive;" class="form-control mr-sm-4" placeholder="Search Project" name="project">
     <div class="input-group-btn">
-      <i class="fas fa-search" style="font-size: 20px; padding-top: 8px;"></i>
+      <i class="fas fa-search" style="font-size: 16px; padding-top: 8px;"></i>
     </div>
   </div>
 
