--- a/awardsapp/templates/registration/login.html
+++ b/awardsapp/templates/registration/login.html
@@ -1,19 +1,21 @@
 {%extends "registration/base.html"%} {% load bootstrap4 %} {% load static %} {% block content %}
+<div style="background-image: url('{% static 'photos/background-2.jpeg' %}'); height: 400px; margin-bottom: 4%;">
+  <h1 class="h1" style="text-align: center; padding-top: 180px; font-family: 'Dancing Script', cursive; color: #000000; font-size:75px;">AWARDS</h1>
+</div>
 <div class="container" style="background-color:#fff;">
   <div class="row p-0 m-0">
     <div class="col-md-6 mt-5">
       <div class="card border-primary mb-4" style="max-width:25rem;">
 
         <div class="card-header text-center">
-          <h1 class="h1" style="font-family: 'Dosis', sans-serif; color:blue;font-size:65px;">AWARDS</h1>
-          <h3 class="text-center" style="color:grey;font-size:15px;font-family: 'Dosis', sans-serif;">Login to see photos and videos from your friends.</h3>
+          <h3 class="text-center" style="color:grey; font-family: 'Dancing Script', cursive;">Login to view, review and submit projects</h3>
         </div>
         <div class="card-body text-primary">
-          <form action="/accounts/login/" method="post" style="font-family: 'Dosis', sans-serif; ">
+          <form action="/accounts/login/" method="post" style="font-family: 'Dancing Script', cursive; ">
             {% csrf_token %} {% bootstrap_form form%}
 
             <div class="form-group">
-              <input type="submit" class="btn btn-primary btn-sm" value="Login">
+              <input type="submit" class="btn btn-success btn-sm" value="Login">
             </div>
 
             <input type="hidden" name="next" value="{{next}}">
@@ -29,9 +31,9 @@
 
       <div class="card mt-5" style="width: 28rem;">
         <div class="card-body text-center">
-          <h5 class="card-title" style="font-family: 'Dosis', sans-serif;">Don't have an account?</h5>
-          <h2 style="color:grey;font-size:10px;font-family: 'Dosis', sans-serif;">By signing up, you agree to our Terms, Data Policy and Cookies Policy.</h2>
-          <a href="/accounts/register" class="btn btn-primary" style="font-family: 'Dosis', sans-serif;">Sign Up</a>
+          <h3 class="card-title" style="font-family: 'Dancing Script', cursive;">Don't have an account?</h3>
+          <h2 style="color:grey;font-size:20px;font-family: 'Dancing Script', cursive;">By signing up, you agree to our Terms, Data Policy and Cookies Policy.</h2>
+          <a href="/accounts/register" class="btn btn-success" style="font-family: 'Dancing Script', cursive;">Sign Up</a>
         </div>
       </div>
 
