--- a/awardsapp/templates/search.html
+++ b/awardsapp/templates/search.html
@@ -11,10 +11,10 @@
 
   </div>
 
-  <h1 style="font-family: 'Dosis', sans-serif;"><strong> These are the projects found </strong></h1>
+  <h1 style="font-family: 'Dancing Script', cursive;"><strong> These are the projects found </strong></h1>
 
   {% for profile in profiles %}
-  <p style="font-family: 'Dosis', sans-serif;"><a href="{% url 'individual_profile_page' profile.user.id %}"> {{profile.user.username}}</a></p>
+  <p style="font-family: 'Dancing Script', cursive;"><a href="{% url 'individual_profile_page' profile.user.id %}"> {{profile.user.username}}</a></p>
   {% endfor %}
 
 
