--- a/awardsapp/templates/registration/registration_form.html
+++ b/awardsapp/templates/registration/registration_form.html
@@ -1,7 +1,8 @@
 {%extends "registration/base.html"%} {% load bootstrap4 %} {%load static%} {% block content %}
-
-<div class="container" style="background-color:#fff;
- background-image:('../../static/photos/rawpixel-594846-unsplash.jpg')">
+<div style="background-image: url('{% static 'photos/background-2.jpeg' %}'); height: 400px; margin-bottom: 4%;">
+  <h1 class="h1" style="text-align: center; padding-top: 180px; font-family: 'Dancing Script', cursive; color: #000000; font-size:75px;">AWARDS</h1>
+</div>
+<div class="container" style="background-color:#fff;">
   <div class="row">
 
     <div class="col-md-6 mt-5">
@@ -12,7 +13,6 @@
       <div class="card border-primary mb-4" style="max-width:25rem;">
 
         <div class="card-header text-center">
-          <h1 class="h1" style="font-family: 'Dosis', cursive; color:blue;font-size:65px;">Awards</h1>
           <h3 class="text-center" style="font-family: 'Dosis', cursive;color:grey;font-size:15px;">Sign up to review and rate website projects</h3>
         </div>
         <div class="card-body text-primary">
@@ -20,7 +20,7 @@
           <form action="/accounts/register/" method="post" style="font-family: 'Dosis', cursive;">
             {% csrf_token %} {% bootstrap_form form %}
             <div class="form-group">
-              <input type="submit" class="btn btn-primary btn-sm" value="Sign Up">
+              <input type="submit" class="btn btn-success btn-sm" value="Sign Up">
             </div>
 
             <input type="hidden" name="next" value="{{next}}">
@@ -40,9 +40,9 @@
     <div class="col-md-5 mt-5">
       <div class="card mt-5" style="width: 28rem;">
         <div class="card-body text-center">
-          <h5 class="card-title" style="font-family: 'Dosis', cursive;">Have an account already?</h5>
-          <h2 style="color:grey;font-size:10px; font-family: 'Dosis', cursive;">By signing up, you agree to our Terms, Data Policy and Cookies Policy.</h2>
-          <a href="/accounts/login" class="btn btn-primary" style="font-family: 'Dosis', cursive;">Login</a>
+          <h5 class="card-title" style="font-family: 'Dancing Script', cursive;">Have an account already?</h5>
+          <h2 style="color:grey;font-size:20px;font-family: 'Dancing Script', cursive;">By signing up, you agree to our Terms, Data Policy and Cookies Policy.</h2>
+          <a href="/accounts/login" class="btn btn-success" style="font-family: 'Dosis', cursive;">Login</a>
         </div>
       </div>
 
