--- a/awardsapp/templates/navbar.html
+++ b/awardsapp/templates/navbar.html
@@ -36,7 +36,31 @@
       font-weight: 500;
       letter-spacing: 1px;
       text-decoration: none;
+      box-shadow: none;
   }
+
+  .btn-success:active:focus {
+    background-color:transparent;
+    color: #ca9e30;
+    border-color: #ca9e30;
+    padding: 10px 14px;
+    font-weight: 500;
+    letter-spacing: 1px;
+    text-decoration: none;
+    box-shadow: none;
+}
+
+.btn-success:active{
+    background-color:transparent;
+    color: #ca9e30;
+    border-color: #ca9e30;
+    padding: 10px 14px;
+    font-weight: 500;
+    letter-spacing: 1px;
+    text-decoration: none;
+    box-shadow: none;
+  }
+
 
 .btn-success:hover{
   background-color:transparent;
@@ -46,6 +70,7 @@
   font-weight: 500;
   letter-spacing: 1px;
   text-decoration: none;
+  box-shadow: none;
 }
 .btn-success:focus{
   background-color:transparent;
@@ -55,6 +80,7 @@
   font-weight: 500;
   letter-spacing: 1px;
   text-decoration: none;
+  box-shadow: none;
 }
 
 h3 {
