--- a/awardsapp/templates/registration/login.html
+++ b/awardsapp/templates/registration/login.html
@@ -5,12 +5,12 @@
 <div class="container" style="background-color:#fff;">
   <div class="row p-0 m-0">
     <div class="col-md-6 mt-5">
-      <div class="card border-primary mb-4" style="max-width:25rem;">
+      <div class="card mb-4" style="max-width:25rem;">
 
         <div class="card-header text-center">
           <h3 class="text-center" style="color:grey; font-family: 'Dancing Script', cursive;">Login to view, review and submit projects</h3>
         </div>
-        <div class="card-body text-primary">
+        <div class="card-body">
           <form action="/accounts/login/" method="post" style="font-family: 'Dancing Script', cursive; ">
             {% csrf_token %} {% bootstrap_form form%}
 
