--- a/awardsapp/templates/registration/registration_form.html
+++ b/awardsapp/templates/registration/registration_form.html
@@ -10,12 +10,12 @@
       {% if form.errors %}
       <p> Some Information Might be Incorrect </p>
       {% endif %}
-      <div class="card border-primary mb-4" style="max-width:25rem;">
+      <div class="card mb-4" style="max-width:25rem;">
 
         <div class="card-header text-center">
-          <h3 class="text-center" style="font-family: 'Dosis', cursive;color:grey;font-size:15px;">Sign up to review and rate website projects</h3>
+          <h3 class="text-center" style="color:grey; font-family: 'Dancing Script', cursive;">Sign up to review and rate website projects</h3>
         </div>
-        <div class="card-body text-primary">
+        <div class="card-body">
 
           <form action="/accounts/register/" method="post" style="font-family: 'Dosis', cursive;">
             {% csrf_token %} {% bootstrap_form form %}
