--- a/awardsapp/templates/registration/edit_profile.html
+++ b/awardsapp/templates/registration/edit_profile.html
@@ -11,7 +11,7 @@
     {%csrf_token%}
 
     {% bootstrap_form form%}
-    <input id="id_myfield" type="submit" class="btn btn-success btn-lg" value="Post">
+    <input id="id_myfield" type="submit" class="btn btn-primary btn-lg" value="Post">
   </form>
 
    {% block scripts %}
