--- a/awardsapp/templates/registration/login.html
+++ b/awardsapp/templates/registration/login.html
@@ -15,7 +15,7 @@
             {% csrf_token %} {% bootstrap_form form%}
 
             <div class="form-group">
-              <input type="submit" class="btn btn-success btn-sm" value="Login">
+              <input type="submit" class="btn btn-primary btn-sm" value="Login">
             </div>
 
             <input type="hidden" name="next" value="{{next}}">
@@ -33,7 +33,7 @@
         <div class="card-body text-center">
           <h3 class="card-title" style="font-family: 'Dancing Script', cursive;">Don't have an account?</h3>
           <h2 style="color:grey;font-size:20px;font-family: 'Dancing Script', cursive;">By signing up, you agree to our Terms, Data Policy and Cookies Policy.</h2>
-          <a href="/accounts/register" class="btn btn-success" style="font-family: 'Dancing Script', cursive;">Sign Up</a>
+          <a href="/accounts/register" class="btn btn-primary" style="font-family: 'Dancing Script', cursive;">Sign Up</a>
         </div>
       </div>
 
