--- a/awardsapp/templates/registration/new_project.html
+++ b/awardsapp/templates/registration/new_project.html
@@ -13,7 +13,7 @@
     {%csrf_token%}
 
     {% bootstrap_form form%}
-    <input id="id_myfield" type="submit" class="btn btn-success btn-sm" value="Post">
+    <input id="id_myfield" type="submit" class="btn btn-primary btn-sm" value="Post">
   </form>
 
    {% block scripts %}
