--- a/awardsapp/templates/registration/user_image_list.html
+++ b/awardsapp/templates/registration/user_image_list.html
@@ -11,7 +11,7 @@
    {% endif %}
     <p style="font-family: 'Dancing Script', cursive;">{{user.profile.bio}}</p>
     <p style="font-family: 'Dancing Script', cursive;">{{user.profile.contact}}</p>
-    <button class="btn btn-success btn-sm"><a href=" {%url 'edit_profile'%}" style="color: #ca9e30; text-decoration: none;">Edit Profile</a></button>
+    <button class="btn btn-primary btn-sm"><a href=" {%url 'edit_profile'%}" style="color: #ca9e30; text-decoration: none;">Edit Profile</a></button>
     </div>
 
 <div class="container">
