--- a/awardsapp/templates/navbar.html
+++ b/awardsapp/templates/navbar.html
@@ -28,7 +28,7 @@
     color: #000000;
   }
 
-.btn-success {
+.btn-primary {
       background-color:transparent;
       color: #ca9e30;
       border-color: #ca9e30;
@@ -39,7 +39,7 @@
       box-shadow: none;
   }
 
-  .btn-success:active:focus {
+  .btn-primary:active:focus {
     background-color:transparent;
     color: #ca9e30;
     border-color: #ca9e30;
@@ -50,7 +50,7 @@
     box-shadow: none;
 }
 
-.btn-success:active{
+.btn-primary:active{
     background-color:transparent;
     color: #ca9e30;
     border-color: #ca9e30;
@@ -62,7 +62,7 @@
   }
 
 
-.btn-success:hover{
+.btn-primary:hover{
   background-color:transparent;
   color: #ca9e30;
   border-color: #ca9e30;
@@ -72,7 +72,7 @@
   text-decoration: none;
   box-shadow: none;
 }
-.btn-success:focus{
+.btn-primary:focus{
   background-color:transparent;
   color: #ca9e30;
   border-color: #ca9e30;
