--- a/awardsapp/templates/registration/new_image.html
+++ b/awardsapp/templates/registration/new_image.html
@@ -23,7 +23,7 @@
     {%csrf_token%}
 
     {% bootstrap_form form%}
-    <input id="id_myfield" type="submit" class="btn btn-success btn-lg" value="Post">
+    <input id="id_myfield" type="submit" class="btn btn-primary btn-lg" value="Post">
   </form>
 
    {% block scripts %}
